Commit: The first part of the login is complete

--- a/login.html
+++ b/login.html
@@ -23,13 +23,13 @@
         <div class="login">
           <h2 class="title">Enter your username and password</h2>
           <form action="">
-            <h2>Enter your Username</h2>
-            <input type="text" placeholder="username" />
+            <h2>Enter your Username:</h2>
+            <input type="text" placeholder="Username" />
 
-            <h2>Enter your Password</h2>
-            <input type="password" />
+            <h2>Enter your Password:</h2>
+            <input type="password" placeholder="Password" />
 
-            <button class="access">Access<a href="#"></a></button>
+            <button class="access"><a href="#">Access</a></button>
             <a href="#">Did you forget your password?</a>
             <a href="#">Register</a>
           </form>
