Commit: style changes upon login

--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
           <div class="icons">
             <button class="mail"><i class="fas fa-envelope"></i>Log in with Email</button>
             <button class="fb"><i class="fab fa-facebook-f"></i>Log in with Facebook</button>
-            <button class="x"><i class="fab fa-twitter"></i>Log in with Twitter</button>
+            <button class="twitter"><i class="fab fa-twitter"></i>Log in with Twitter</button>
             <button class="ig"><i class="fab fa-instagram"></i>Log in with Instagram</button>
           </div>
         </div>
