Commit: Last Version v1.0

--- a/login.html
+++ b/login.html
@@ -29,9 +29,9 @@
             <h2>Enter your Password:</h2>
             <input type="password" placeholder="Password" />
 
-            <button class="access"><a href="#">Access</a></button>
+            <button class="access"><a href="index.html">Access</a></button>
             <a href="#">Did you forget your password?</a>
-            <a href="#">Register</a>
+            <a href="register.html">Register</a>
           </form>
         </div>
         <div class="login-nt">
