--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             voluptate rerum ad animi explicabo, asperiores sed minima
             repudiandae veniam officia aspernatur.
           </p>
-          <button><a href="#">SEE MORE</a></button>
+          <button><a href="login.html">SEE MORE</a></button>
         </div>
         <div class="image">
           <img src="img/undraw_Code_review_re_woeb.svg" alt="" />
